# clignote

./: AGENTS.md  Cargo.toml  project.org  readme.org
.github/workflows/: ci.yml
crates/clignote-core/: Cargo.toml
crates/clignote-core/src/: document.rs  inline.rs  lexer.rs  lib.rs  parser.rs  serializer.rs
crates/clignote-tui/: Cargo.toml
crates/clignote-tui/src/: app.rs  git.rs  keymap.rs  lib.rs  pane.rs  ui.rs
crates/cln/: Cargo.toml
crates/cln/src/: main.rs
